src/styles/home.css
@layer global, test;

@layer test {
  :root {
    --short-transition: 0.1s;
    --long-transition: 0.3s;
    --slide-transition: 0.5s;
    --top-transition: 0.5s;
    --background: #9eb7c3;
    --menu-white: var(--offwhite);
  }

  #intro-container {
    width: auto;
    height: auto;
    margin: 0 1.25rem;
    transition: height var(--top-transition) ease;
  }

  #intro {
    max-width: 48rem;
    margin: 0 auto;
    background-color: var(--offwhite);
    transition: var(--top-transition) ease;
    height: 24rem;
    width: calc(100vw - 2.5rem);
  }

  #intro-container.closed #intro {
    height: 0;
    width: 0;
  }

  #intro p {
    opacity: 100;
    font-size: 1.3rem;
    transition: var(--top-transition) ease;
  }

  #intro-container.closed #intro p {
    scale: 0;
    opacity: 0;
  }

  #intro-container.no-transition * {
    transition: none;
  }




  @media screen and (min-width: 48.75rem) {
    #menu-work.underline .oval-text {
      text-decoration: underline;
      text-underline-offset: 0.3em;
      text-decoration-color: #463f3c;
      text-decoration-thickness: 2px;
    }
  }

  #waiting-room {
    display: block;
    visibility: hidden;
  }

  #work-cols {
    margin: 0 1.25rem;
    display: flex;
    justify-content: center;
    gap: 1.25rem;
  }

  #work-cols .column {
    flex: 1 1 var(--colWidthStyle);
    height: auto;
  }

  #work-item {
    touch-action: manipulation;
  }

  .work-item .cap-container {
    width: 100%;
    height: 6rem;
  }

  .work-item .cap {
    background-color: var(--work-item-color);
    margin: 0;
    z-index: 0;
  }

  .work-item .cap.bottom {
    margin-top: -0.5px;
  }

  .work-content-wrapper {
    position: relative;
    margin-top: -0.5px;
    height: calc(var(--content-height) - 3rem);
    background-color: var(--work-item-color);
  }

  .work-link {
    display: block;
    position: absolute;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 30;
  }

  /* .work-link.dragging {
    pointer-events: none;
  } */

  .work-link:hover {
    position: absolute;
  }

  .work-item:not(.draft):not(.closed) .work-content-wrapper {
    cursor: pointer;
  }

  .work-item.closed * {
    cursor: default;
    pointer-events: none;
  }

  .work-content {
    position: relative;
    z-index: 1;
    top: -1.5rem;
    transform-origin: 0 1.5rem;
    padding: 0 1.5rem;
  }

  .work-url {
    text-decoration: none;
  }

  .work-item-scaler {
    transform-origin: top;
    position: relative;
    transition: 0.08s ease-out;
    margin-bottom: 0;
  }

  @media (hover: hover) {
    .hovered:not(.closed) .work-item-scaler {
      scale: 1.05;
      transition: 0.08s ease-in;
      margin-bottom: calc(var(--item-height) * 0.05);
    }
  }

  .work-content *:last-child {
    margin-bottom: 0;
  }

  .work-rows {
    margin-top: 1rem;
    padding-bottom: 1rem;
    display: flex;
    flex-direction: column;
    gap: 0.6rem;
    width: 100%;
  }

  .work-row {
    width: 100%;
    display: flex;
    justify-content: space-between;
  }

  .work-row .work-image {
    display: block;
    width: var(--work-image-width);
    height: auto;
  }

  .work-slides {
    margin-top: 1rem;
    padding-bottom: 1rem;
  }

  .work-slides .work-image {
    transform-origin: top;
    transform: scale(1, 1);
    height: var(--work-image-height);
    transition-timing-function: ease;
    transition: var(--slide-transition);
  }

  .work-slides .work-image.closed {
    transform: scale(1, 0);
    height: 0;
  }

  .image-waiting-room {
    width: 0;
    height: 0;
    visibility: hidden;
  }


  .work-item.closable.closed .work-content-wrapper {
    height: 0;
  }

  .work-item.closable.closed .work-content {
    scale: 1 0;
  }

  .work-item.closable.closed {
    scale: var(--min-width) 1;
  }

  .work-item.closable.closed .cap-container {
    height: var(--min-height);
  }

  #work-cols.hide-others .work-item.closable.closed:not(.ish) .cap-container {
    height: 0;
  }

  .work-item.unlisted.closed:not(.ish) .cap-container {
    height: 0;
  }

  @media (hover: hover) {
    .work-item.closable.closed.ish {
      scale: calc(var(--min-width) * 3) 1;
    }

    .work-item.closable.closed.ish .cap-container {
      height: calc(var(--min-height) * 2);
    }

    .work-item.closable.open.ish {
      scale: 0.8 1;
    }

    .work-item.closable.open.ish .work-content {
      scale: 1 0.8;
    }

    .work-item.closable.open.ish .work-content-wrapper {
      height: var(--open-ish-content-height);
    }

    .work-item.closable.open.ish .cap-container {
      height: 4.8rem;
    }
  }

  .work-item.closable.hidden .cap-container {
    height: 0;
  }

  .work-item.closable, .work-item.closable *:not(.work-item-scaler):not(.work-image):not(.slide-transition) {
    transition-duration: var(--long-transition);
    transition-timing-function: ease-out;
  }

  .work-item.closable.ish, .work-item.closable.ish *:not(.work-item-scaler):not(.work-image):not(.slide-transition) {
    transition-timing-function: ease-in;
  }

  .work-item.closable.short, .work-item.closable.short *:not(.work-item-scaler):not(.work-image):not(.slide-transition) {
    transition-duration: var(--short-transition);
  }



  .work-content-wrapper.slide-transition {
    transition-duration: var(--slide-transition);
    transition-timing-function: ease;
  }










  .work-title {
    margin-top: 0;
    font-size: 1.2rem;
    line-height: 1.4em;
    font-variation-settings: 'wght' 450, 'wdth' 120;
    margin-bottom: 0.4rem;
  }

  .work-description, .coming-soon {
    font-size: 1rem;
    line-height: 1.4em;
    font-variation-settings: 'wght' 420, 'wdth' 110;
    margin-top: 0;
    margin-bottom: 0.3rem;
  }

  .work-item.draft * {
    color: rgb(158, 169, 173);
  }

  .coming-soon {
    font-style: italic;
  }



  body {
    margin-top: 5.375rem;
    padding-left: 0;
    padding-right: 0;
    overflow-x: hidden;
  }

  #tags {
    display: flex;
    align-items: center;
    height: 12rem;
    padding: 0 1.25rem;
    overflow: scroll;
    scroll-behavior: smooth;
    background-color: #4d362e;
    touch-action: manipulation;
  }

  @media screen and (max-height: 800px) {
    #tags {
      height: 8rem;
    }
  }

  #top-tag-separator {
    height: 2rem;
    background-color: var(--offwhite);
    transition: height var(--top-transition);
  }

  #top-tag-separator.closed {
    height: 0;
  }

  #tag-separator {
    /* height: 2rem; */
    padding-top: 1rem;
    padding-bottom: 1rem;
    background-color: var(--offwhite);
  }

  /* rgb(85, 93, 104) */

  .work-tag {
    /* flex: 1 1 0px; */
    /* flex: 1 0  */
    /* flex-basis: max-content;
    flex-shrink: 1; */
    flex: 1 1 max-content;
    /* --oval-color: #bbbcc8; */
    --oval-color: var(--offwhite);
    scroll-margin: 0 30vw;
    cursor: pointer;
    touch-action: manipulation;
  }

  .work-tag .oval-text {
    text-transform: uppercase;
    font-size: 1rem;
    --k-wdth: 120;
    line-height: 1.3;
    color: #4d362e;
    padding: 0 1.5rem;
  }

  .work-tag[data-slug="writing-systems"] {
    /* flex-shrink: 0.15; */
    min-width: 15rem;
  }

  .work-tag.unlisted {
    margin-right: 1.25rem;
  }

  .work-tag.closed {
    height: 50%;
  }

  .work-tag.open {
    height: 100%;
  }

  @media (hover: hover) {
    .work-tag.closed.ish {
      height: 60%;
    }

    .work-tag.open.ish {
      height: 90%;
    }
  }

  .work-tag {
    transition-duration: var(--long-transition);
    transition-timing-function: ease-out;
  }

  .work-tag.ish {
    transition-timing-function: ease-in;
  }

  .work-tag.short {
    transition-duration: var(--short-transition);
  }





  .work-tag .oval {
    height: 100%;
  }




  #tag-separator {
    overflow: hidden;
  }

  #tag-intro-container {
    padding: 0 1.5rem;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    transition-duration: var(--long-transition);
  }

  #tag-intro-current {
    position: relative;
    /* width: 100%; */
  }

  #tag-intro-incoming {
    position: absolute;
    top: 0;
    width: calc(100% - 3rem);
    transform-origin: top;
  }

  #tag-intro-waiting-room {
    height: 0;
    visibility: hidden;
  }

  #tag-intro-container.transitioning * {
    transition: opacity var(--long-transition);
  }



  .tag-intro h1 {
    font-family: 'Konsole';
    font-size: 1.8rem;
    font-weight: normal;
    font-variation-settings: 'wght' 450, 'wdth' 115;
    line-height: 1.3;
    margin-bottom: 0;
  }

  .tag-intro h1 ~ p:last-child {
    margin-top: .3rem;
  }
}

